<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">
    <EditText
        android:id="@+id/middlename_editview"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:hint="@string/middle_name_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/lastname_editview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_editview"
        tools:ignore="MissingConstraints"></EditText>

    <EditText
        android:id="@+id/age_editview"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:hint="@string/age_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/sex_editview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname_editview"
        tools:ignore="MissingConstraints"></EditText>

    <EditText
        android:id="@+id/firstname_editview"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:hint="@string/first_name_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/sex_editview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        tools:ignore="MissingConstraints"></EditText>

    <EditText
        android:id="@+id/sex_editview"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:hint="@string/sex_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"></EditText>

    <EditText
        android:id="@+id/faculty_editview1"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:editable="true"
        android:hint="@string/faculty_placeholder"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lastname_editview"
        tools:ignore="MissingConstraints"></EditText>

    <EditText
        android:id="@+id/lastname_editview"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:hint="@string/last_name_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/sex_editview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_editview"
        tools:ignore="MissingConstraints"></EditText>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/student_add_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faculty_editview1" />

</androidx.constraintlayout.widget.ConstraintLayout>